[project]
name = "radpsd"
version = "1.0.0"
description = "Radial PSD (Power Spectral Density) calculation library"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["numpy", "torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "loguru>=0.7.3",
]
